# Project1_Systems

./: Anillo_estructural_Archivo.stl  ArchivoPrueva.stl  ArchivoPrueva_2.stl  CanStructurePortal.txt  Falcon_Parker_Advanced_Enhanced_5.stl  Flatten_mesh_layer_example.stl  MergeadoPrimeroInteresante.stl  Nave.stl  README.md  SpaceShipIdeaBlend.py  SuperNave_Paraview.stl.pvd  SuperNave_Paraview.stl_0.vtu  SuperNave_Paraview_Combined.stl  alien_style_ship.stl  alien_style_ship_with_engines.stl  alien_style_wide_grotesque_ship_2_anillo.stl  falcon_caza_styled.stl  falcon_light.stl  falcon_parker_star_trek_loaded_v1_nuevo_anillo.stl  falcon_parker_volume_fixed.stl  falcon_reducido.stl  fuselage_bent_v2.stl  space_station.stl  star_treck_station.stl  star_trek_v3.stl  stellar_modular_propulsion_extended.stl  tomakav_extended.stl
Metallurgy_materials/python_examples/: .gitignore  ArranqueCoheteSimularPython.txt  Combustion.py  CompositeMaterialDocument.py  Composites_simulation.py  FabricationProcessMetallurgy.txt  ForginBlackStarMaterialsNew.txt  Hydrazine.py  MERLIN_SIM.py  MODULES.txt  MetalPorosityHydrogenVacuumTest.py  MetalViscosity_carbon.py  MetallurgyMaterialsBlackStargravty.txt  MissionBlackStarComponents.txt  Nozzle.py  ProcessPropulsionMetalLiquidPropllnt.txt  PyVistaExample.py  RocketBurningState.py  RocketCea.py  Sensor_sim.py  SimulationMainCompositeMaterialI.py  SolarCompressorStage.py  SolarParkPlasmaTensor.py  SolarParkSimulation.py  SolarParkerMaterialsII.txt  SolarParkerProbeMaterialsI.txt  SolarSystemConfig.py  SolarparkRadiationResistance.py  main.py  (+5 more)
(+110 files in other folders)
